@@ -1,4 +1,6 @@
 ======================
+    ADDED: CTRL-L shortcut to go to the location bar (origin) as in firefox and konqueror
+    FIXED: changed locate-gui shortcut from ctrl-l to shift+ctrl+l
     FIXED: bookmark icons were not saved correctly
 
 1.60.0
